--- a/index.html
+++ b/index.html
@@ -352,12 +352,12 @@ Empowering a Greener Future">
   <div class="left-panel">
     <!-- Card -->
     <div class="card">
-        <img src="mana.png" alt="Card Image" style="width: 100%;">
+        <img src="mana.png" alt="Card Image">
         
     </div>
 
     <!-- Social Impact -->
-    <h3><strong>Corporate Social Responsibility (CSR) Initiatives</strong></h3>
+    <h3 style="padding-top: 30px;"><strong>Corporate Social Responsibility (CSR) Initiatives</strong></h3>
     <p>At Green Infrastructure and Power Investments Plc, we are deeply committed to environmental sustainability and biodiversity conservation. Our CSR initiatives are designed to address pressing ecological challenges in a real and tangible way. Two key components of our environmental stewardship efforts focus on managing the proliferation of Water Hyacinth and protecting manatees.</p>
 </div>
 
