--- a/csr.html
+++ b/csr.html
@@ -49,7 +49,7 @@
 </nav>
 
 <div class="image-container" style="z-index: 0;">
-  <img src="cow.jpg" alt="Image" style="width: 100%;">
+  <img src="xxx.png" alt="Image" style="width: 100%;">
   <div class="caption">Social Impact</div>
 </div>
 
@@ -163,7 +163,7 @@
 <div class="image-container" style="padding-top: 35px; z-index: 0;" data-aos="fade-down"
 data-aos-easing="linear"
 data-aos-duration="1500">
-  <img src="bat.jpg" alt="Image" style="width: 100%; height: 100%;">
+  <img src="aad.png" alt="Image" style="width: 100%; height: 100%;">
   <div class="caption">Water Hyacinth</div>
 </div>
 
