--- a/csr.html
+++ b/csr.html
@@ -209,8 +209,8 @@ data-aos-offset="0">
       <p>In our ongoing effort to protect marine wildlife, we are excited to announce a new partnership with the <span class="dog"> World Wildlife Fund (WWF) </span>to establish a state-of-the-art Marine Wildlife Conservation Center. This center will serve as a global hub for marine research, conservation, and education, focusing on the preservation of marine biodiversity, including manatees and other endangered species. The center will be a beacon of hope for marine conservation, attracting experts, researchers, and conservationists from around the world to collaborate on groundbreaking projects.</p>
       
   <div class="dropdown" >
-    <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" style=" background-color: #Ab5943; border-radius: 20px; border: 0px;" >
-      Dropdown button
+    <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" style=" background-color: #D6A295; border-radius: 20px; border: 0px;" >
+      Continue Reading
     </button>
     <ul class="dropdown-menu" style=" width: 350px;">
  <li><span class="dropdown-item-text"><h5> <span class="dog"> Research and Conservation: </span></h5>
