--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Empowering a Greener Future">
   
 
   
-<div id="demo" class="carousel slide" data-bs-ride="carousel">
+<div id="demo" class="carousel slide" data-bs-ride="carousel" style="padding-top: 20px;">
 
     <!-- The slideshow/carousel -->
    <div class="carousel-inner">
