--- a/csr.html
+++ b/csr.html
@@ -34,7 +34,7 @@
   <ul class="nav-list">
     <li><a href="index.html">Home</a></li>
     <li><a href="#">About Us</a></li>
-    <li><a href="#puss">Contact Us</a></li>
+    <li><a href="#">Contact Us</a></li>
     <li><a href="csr.html">Social Impact</a></li>
     <li><a href="#">Investor Relations</a></li>
   </ul>
@@ -49,7 +49,7 @@
 </nav>
 
 <div class="image-container" style="z-index: 0;">
-  <img src="xxx.webp" alt="Image" style="width: 100%;">
+  <img src="xxx.png" alt="Image" style="width: 100%; box-shadow: 0 4px 16px rgba(171, 89, 67, 0.8);">
   <div class="caption">Social Impact</div>
 </div>
 
@@ -63,7 +63,8 @@
     <div class="flex-item-left" data-aos="zoom-in-right"  data-aos-duration="4000">
       <div class="peach-container">
         <a href="https://www.oceansentry.org/conservationists-condemn-killing-manatee-nigeria/villagers-in-sapele-delta-state-killed-an-african-manatee-cut-it-into-pieces-and-shared-it-meat-among-the-locals2/" target="_blank">
-          <img class="peach-image" src="man.png" alt="Image">
+          <img class="peach-image" src="man.png" alt="Image" style="  box-shadow: 0 4px 16px rgba(171, 89, 67, 0.8);
+          ">
         </a>
         <div class="peach-caption">Villagers-in-Sapele-Delta-State-killed-an-African-manatee-cut-it-into-pieces ...</div>
       </div>
@@ -163,7 +164,7 @@
 <div class="image-container" style="padding-top: 35px; z-index: 0;" data-aos="fade-down"
 data-aos-easing="linear"
 data-aos-duration="1500">
-  <img src="aad.webp" alt="Image" style="width: 100%; height: 100%;">
+  <img src="aad.webp" alt="Image" style="width: 100%; height: 100%; box-shadow: 0 4px 16px rgba(171, 89, 67, 9.0);">
   <div class="caption">Water Hyacinth</div>
 </div>
 
@@ -209,8 +210,8 @@ data-aos-offset="0">
       <p>In our ongoing effort to protect marine wildlife, we are excited to announce a new partnership with the <span class="dog"> World Wildlife Fund (WWF) </span>to establish a state-of-the-art Marine Wildlife Conservation Center. This center will serve as a global hub for marine research, conservation, and education, focusing on the preservation of marine biodiversity, including manatees and other endangered species. The center will be a beacon of hope for marine conservation, attracting experts, researchers, and conservationists from around the world to collaborate on groundbreaking projects.</p>
       
   <div class="dropdown" >
-    <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" style=" background-color: #D6A295; border-radius: 20px; border: 0px;" >
-      Continue Reading
+    <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" style=" background-color: #Ab5943; border-radius: 20px; border: 0px;" >
+      Dropdown button
     </button>
     <ul class="dropdown-menu" style=" width: 350px;">
  <li><span class="dropdown-item-text"><h5> <span class="dog"> Research and Conservation: </span></h5>
