--- a/csr.html
+++ b/csr.html
@@ -42,14 +42,14 @@
   <div class="dropdown-content" id="dropdownContent">
     <a href="index.html">Home</a>
     <a href="#">About Us</a>
-    <a href="#">Contact Us</a>
+    <a href="#puss">Contact Us</a>
     <a href="csr.html">Social Impact</a>
     <a href="#">Investor Relations</a>
   </div>
 </nav>
 
 <div class="image-container" style="z-index: 0;">
-  <img src="xxx.png" alt="Image" style="width: 100%; box-shadow: 0 4px 16px rgba(171, 89, 67, 0.8);">
+  <img src="xxx.webp" alt="Image" style="width: 100%; box-shadow: 0 4px 16px rgba(171, 89, 67, 0.8);">
   <div class="caption">Social Impact</div>
 </div>
 
