--- a/csr.html
+++ b/csr.html
@@ -33,7 +33,7 @@
   <img src="logo.png" alt="Logo" style="width: 100%; height: 100%;">
   <ul class="nav-list">
     <li><a href="index.html">Home</a></li>
-    <li><a href="#">About Us</a></li>
+    <li><a href="about.html">About Us</a></li>
     <li><a href="#puss">Contact Us</a></li>
     <li><a href="csr.html">Social Impact</a></li>
     <li><a href="#">Investor Relations</a></li>
@@ -41,7 +41,7 @@
   <button class="menu-button" id="menuButton"><i class="fas fa-bars"></i></button>
   <div class="dropdown-content" id="dropdownContent">
     <a href="index.html">Home</a>
-    <a href="#">About Us</a>
+    <a href="about.html">About Us</a>
     <a href="#puss">Contact Us</a>
     <a href="csr.html">Social Impact</a>
     <a href="#">Investor Relations</a>
@@ -284,7 +284,7 @@ data-aos-offset="0">
         <ul class="custom-list">
           <li><a href="index.html" style="font-size: 18px;">Home</a></li>
           <li><a href="csr.html" style="font-size: 18px;">Social Impact</a></li>
-          <li><a href="#" target="_blank" style="font-size: 18px;">About Us</a></li>
+          <li><a href="about.html" target="_blank" style="font-size: 18px;">About Us</a></li>
         </ul>
       </div>
       
