--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Empowering a Greener Future">
     <img src="logo.png" alt="Logo" style="width: 100%; height: 100%;">
     <ul class="nav-list">
       <li><a href="index.html">Home</a></li>
-      <li><a href="#">About Us</a></li>
+      <li><a href="about.html">About Us</a></li>
       <li><a href="#puss">Contact Us</a></li>
       <li><a href="csr.html">Social Impact</a></li>
       <li><a href="#">Investor Relations</a></li>
@@ -56,7 +56,7 @@ Empowering a Greener Future">
     <button class="menu-button" id="menuButton"><i class="fas fa-bars"></i></button>
     <div class="dropdown-content" id="dropdownContent">
       <a href="index.html">Home</a>
-      <a href="#">About Us</a>
+      <a href="about.html">About Us</a>
       <a href="#puss">Contact Us</a>
       <a href="csr.html">Social Impact</a>
       <a href="#">Investor Relations</a>
@@ -488,7 +488,7 @@ Empowering a Greener Future">
        <ul class="custom-list">
         <li><a href="index.html">Home</a></li>
         <li><a href="csr.html">Social Impact</a></li>
-        <li><a href="#" target="_blank">About Us</a></li>
+        <li><a href="about.html">About Us</a></li>
     </ul>
       </div>
       
