--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ Empowering a Greener Future">
 <p>
  <span class="all-caps"> GREEN INFRASTRUCTURE AND POWER INVESTMENTS PLC </span> is a company dedicated to advancing sustainable energy solutions. Their current flagship initiative involves the comprehensive development and management of a Solar Photovoltaic (PV) Farm in Mill City Clean Energy City, Iwopin, Ogun State. This project will feature a 250 MWA solar farm and a 63 MW/126 MWh Battery Energy Storage System (BESS).<br><br>
  The company's scope of work encompasses the entire project lifecycle, including design, construction, financing, commissioning, operation, and maintenance.</p>
- <a href="https://example.com" target="_blank" class="pill-button">Continue Reading</a>
+ <a href="about.html" class="pill-button">Continue Reading</a>
 
 
 
