--- a/about.html
+++ b/about.html
@@ -33,7 +33,18 @@
   <img src="logo.png" alt="Logo" style="width: 100%; height: 100%;">
   <ul class="nav-list">
     <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About Us</a></li>
+
+
+    <div class="dropdown">
+      <a href="about.html">About Us</a>
+      <div class="dropdown-content">
+        <a href="#">The Board</a>
+        <a href="#">Our History</a>
+        <a href="#">Project Specifications</a>
+        </div>
+  </div>    
+    
+    
     <li><a href="#puss">Contact Us</a></li>
     <li><a href="csr.html">Social Impact</a></li>
     <li><a href="#">Investor Relations</a></li>
@@ -41,7 +52,17 @@
   <button class="menu-button" id="menuButton"><i class="fas fa-bars"></i></button>
   <div class="dropdown-content" id="dropdownContent">
     <a href="index.html">Home</a>
+
+    <div class="dropdown">
     <a href="about.html">About Us</a>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+      </div>
+</div>
+
+
     <a href="#puss">Contact Us</a>
     <a href="csr.html">Social Impact</a>
     <a href="#">Investor Relations</a>
@@ -51,7 +72,10 @@
 
 
 
-
+<div class="image-container" style="z-index: 0;">
+  <img src="xxx.png" alt="Image" style="width: 100%; box-shadow: 0 4px 16px rgba(171, 89, 67, 0.8);">
+  <div class="caption">About Us</div>
+</div>
 
 
 
