--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 
 
 <div class="image-container" style="z-index: 0;">
-  <img src="xxx.png" alt="Image" style="width: 100%; box-shadow: 0 4px 16px rgba(171, 89, 67, 0.8);">
+  <img src="xxx.webp" alt="Image" style="width: 100%; box-shadow: 0 4px 16px rgba(171, 89, 67, 0.8);">
   <div class="caption">About Us</div>
 </div>
 
