--- a/about.html
+++ b/about.html
@@ -54,13 +54,13 @@
     <a href="index.html">Home</a>
 
     <div class="dropdown">
-    <a href="about.html">About Us</a>
-    <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
-      </div>
-</div>
+      <a href="about.html">About Us</a>
+      <div class="dropdown-content">
+        <a href="#">The Board</a>
+        <a href="#">Our History</a>
+        <a href="#">Project Specifications</a>
+        </div>
+  </div>    
 
 
     <a href="#puss">Contact Us</a>
