--- a/index.html
+++ b/index.html
@@ -378,13 +378,13 @@ Empowering a Greener Future">
     </div>
 
     <!-- Social Impact -->
-    <h3 style="padding-top: 30px;"><strong>Corporate Social Responsibility (CSR) Initiatives</strong></h3>
+    <h3 style="padding-top: 30px; font-size: 24px;"><strong>Corporate Social Responsibility (CSR) Initiatives</strong></h3>
     <p>At Green Infrastructure and Power Investments Plc, we are deeply committed to environmental sustainability and biodiversity conservation. Our CSR initiatives are designed to address pressing ecological challenges in a real and tangible way. Two key components of our environmental stewardship efforts focus on managing the proliferation of Water Hyacinth and protecting manatees.</p>
 </div>
 
     <div class="right-panel">
         <!-- Content for the right panel -->
-        <h3><strong>Sustainable Management of Water Hyacinth</strong></h3>
+        <h3 style="font-size: 24px";><strong>Sustainable Management of Water Hyacinth</strong></h3>
         <p>Water Hyacinth, an invasive aquatic plant, poses significant challenges to local ecosystems, obstructing waterways, and impacting water quality. To address this, we are launching a Biogas Generation Project that utilizes Water Hyacinth Biomass (WHB). By converting the overabundant Water Hyacinth into biogas, we aim to:</p>
       
 <div class="dropdown">
