--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ Empowering a Greener Future">
 
     <div class="right-panel">
         <!-- Content for the right panel -->
-        <h3 style="font-size: 24px";><strong>Sustainable Management of Water Hyacinth</strong></h3>
+        <h3 style="font-size: 23px";><strong>Sustainable Management of Water Hyacinth</strong></h3>
         <p>Water Hyacinth, an invasive aquatic plant, poses significant challenges to local ecosystems, obstructing waterways, and impacting water quality. To address this, we are launching a Biogas Generation Project that utilizes Water Hyacinth Biomass (WHB). By converting the overabundant Water Hyacinth into biogas, we aim to:</p>
       
 <div class="dropdown">
@@ -418,7 +418,7 @@ Empowering a Greener Future">
 
       
       <section>
-    <h2><strong>Protection of Manatees</strong></h2>
+    <h2 style="font-size: 23px;"><strong>Protection of Manatees</strong></h2>
     <p>Manatees, gentle giants of our waters, are increasingly threatened by habitat loss, boat collisions, entanglement in fishing gear, and climate change. Partnering with the World Wildlife Fund (WWF), we are committed to implementing initiatives that protect these vulnerable creatures:
 </p>
 
