--- a/csr.html
+++ b/csr.html
@@ -72,7 +72,9 @@
 </div>
 
 <div class="sharon">
-  <h1>Corporate Social Responsibility (CSR) Initiatives</h1>
+  <h1 id="leg"></h1>
+
+  
   <p class="cop">At Green Infrastructure and Power Investments Plc, we are deeply committed to environmental sustainability and biodiversity conservation. Our Corporate Social Responsibility (CSR) initiatives are meticulously designed to address pressing ecological challenges in a meaningful and tangible way. Our dedication to the environment is embodied in our comprehensive programs aimed at managing the proliferation of Water Hyacinth and protecting the vulnerable manatee population. <br>Furthermore, we are thrilled to announce a groundbreaking partnership with the World Wildlife Fund (WWF) to build a state-of-the-art Marine Wildlife Conservation Center, further solidifying our role as global leaders in environmental stewardship.</p>
 </div>
 
@@ -97,7 +99,7 @@
     </div>
   </div>
 
-  <h3 style="text-align: center;">West African Manatees</h3>
+  <h3 style="text-align: center; font-size: 20px;">West African Manatees</h3>
   <p class="don">West African manatees, scientifically known as Trichechus senegalensis, are currently facing significant threats that push them towards the brink of extinction. These unique marine mammals inhabit the coastal and freshwater environments of West Africa, ranging from Senegal to Angola. Their status is classified as vulnerable on the IUCN Red List, indicating that they are at high risk of endangerment in the wild.</p>
   
   <div class="koko">
@@ -190,7 +192,7 @@ data-aos-duration="1500">
 data-aos-easing="ease-in-back"
 data-aos-delay="300"
 data-aos-offset="0"> 
-  <h5 style="padding-bottom: 25px;">Sustainable Management of Water Hyacinth:</h5>
+  <h3 style="padding-bottom: 20px;">Sustainable Management of Water Hyacinth:</h3>
 <p>Water Hyacinth, an invasive aquatic plant, poses significant challenges to local ecosystems, obstructing waterways, and negatively impacting water quality. This fast-growing plant not only disrupts aquatic ecosystems but also impedes human activities and economic development dependent on healthy waterways.<br> To address this multifaceted issue, we are launching an innovative Biogas Generation Project that utilizes Water Hyacinth Biomass (WHB). By converting the overabundant Water Hyacinth into biogas, we aim to achieve several critical objectives:</p>
   
 
