--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@ Empowering a Greener Future">
 <div class="flex-container" data-aos="fade-up" data-aos-duration="3000">
   <div class="flex-item-left">
     
-    <div style="text-align: center; padding-bottom: 25px;" id="fly">
+    <div style="text-align: center; padding-bottom: 15px;" id="fly">
       <strong>
-        <span style="color: #Ab5943; line-height: 45px; letter-spacing: -0.08em; font-size: 19pt; font-family: Helvetica;" id="text"></span>
+        <span style="color: #Ab5943; line-height: 45px; letter-spacing: -0.08em; font-size: 19pt; font-family: Helvetica;" id="text"> Empowering a Greener Future</span>
       </strong>
     </div>
     
