--- a/index.html
+++ b/index.html
@@ -552,6 +552,7 @@ By addressing the challenges posed by Water Hyacinth and focusing on manatee con
         <li><a href="index.html">Home</a></li>
         <li><a href="csr.html">Social Impact</a></li>
         <li><a href="about.html">About Us</a></li>
+         <li><a href="pac.html">Privacy & Cookies Policy</a></li>
     </ul>
       </div>
       
