--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ Empowering a Greener Future">
     </div>
 
     <!-- Social Impact -->
-<div style="text-align: left; padding-top: 20px;"><strong><span style="color: #Ab5943; line-height: 45px; letter-spacing: -0.08em; font-size: 16pt; font-family: Helvetica;">Corporate Social Responsibility (CSR) Initiatives</span></strong></div>
+<div style="text-align: left; padding-top: 20px;"><span style="color: #Ab5943; line-height: 45px; letter-spacing: -0.08em; font-size: 16pt; font-family: Helvetica;">Corporate Social Responsibility (CSR) Initiatives</span></div>
 
 
     <p>At Green Infrastructure and Power Investments Plc, we are deeply committed to environmental sustainability and biodiversity conservation. Our CSR initiatives are designed to address pressing ecological challenges in a real and tangible way. Two key components of our environmental stewardship efforts focus on managing the proliferation of Water Hyacinth and protecting manatees.</p>
