--- a/index.html
+++ b/index.html
@@ -549,11 +549,11 @@ By addressing the challenges posed by Water Hyacinth and focusing on manatee con
      
         <h3 class="dog" style="padding-top: 40px;"><i class="fas fa-link"></i> Quick Links</h3>
        <ul class="custom-list">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="csr.html">Social Impact</a></li>
-        <li><a href="about.html">About Us</a></li>
-         <li><a href="pac.html">Privacy & Cookies Policy</a></li>
-    </ul>
+          <li><a href="index.html" style="font-size: 15px;">Home</a></li>
+          <li><a href="csr.html" style="font-size: 15px;">Social Impact</a></li>
+          <li><a href="about.html" target="_blank" style="font-size: 15px;">About Us</a></li>
+          <li><a href="pac.html" style="font-size: 15px;"> Privacy & Cookies Policy</a></li>
+        </ul>
       </div>
       
   
