--- a/csr.html
+++ b/csr.html
@@ -79,7 +79,7 @@
 
 
 <div class="image-container" style="z-index: 0;">
-  <img src="xxx.png" alt="Image" style="width: 100%; box-shadow: 0 4px 16px rgba(171, 89, 67, 0.8);">
+  <img src="xxx.png" alt="Image" style="width: 100%; object-fit: cover; box-shadow: 0 4px 16px rgba(171, 89, 67, 0.8);">
   <div class="caption"><span style="color: black; line-height: 5px; letter-spacing: -0.08em; font-size: 24pt; font-family: Helvetica;">Social Impact</span></div>
 </div>
 
@@ -204,7 +204,9 @@
 <div class="image-container" style="padding-top: 35px; z-index: 0;" data-aos="fade-down"
 data-aos-easing="linear"
 data-aos-duration="1500">
-  <img src="aad.webp" alt="Image" style="width: 100%; height: 100%; box-shadow: 0 4px 16px rgba(171, 89, 67, 9.0);">
+
+<img src="https://i.pinimg.com/originals/ea/3b/08/ea3b08df8034dccf9aa2fd824568c939.jpg" alt="Image" style="width: 100%; height: 100%; object-fit: cover; box-shadow: 0 4px 16px rgba(171, 89, 67, 9.0);">
+
   <div class="caption"><span style="color: black; line-height: 5px; letter-spacing: -0.08em; font-size: 24pt; font-family: Helvetica;"><strong>Water Hyacinth</strong></span></div>
 </div>
 
