--- a/csr.html
+++ b/csr.html
@@ -92,6 +92,15 @@
   <p class="cop">At Green Infrastructure and Power Investments Plc, we are deeply committed to environmental sustainability and biodiversity conservation. Our Corporate Social Responsibility (CSR) initiatives are meticulously designed to address pressing ecological challenges in a meaningful and tangible way. Our dedication to the environment is embodied in our comprehensive programs aimed at managing the proliferation of Water Hyacinth and protecting the vulnerable manatee population. <br>Furthermore, we are thrilled to announce a groundbreaking partnership with the World Wildlife Fund (WWF) to build a state-of-the-art Marine Wildlife Conservation Center, further solidifying our role as global leaders in environmental stewardship.</p>
 </div>
 
+
+
+<div class="image-container" style="z-index: 0;">
+  <img src="https://c.tenor.com/Zw_uahLlmJwAAAAd/tenor.gif" alt="Image" style="width: 100%; object-fit: cover; box-shadow: 0 4px 16px rgba(171, 89, 67, 0.8);">
+  <div class="caption"><span style="color: black; line-height: 5px; letter-spacing: -0.08em; font-size: 24pt; font-family: Helvetica;">West African Manatees</span></div>
+</div>
+
+<br><hr><br>
+
 <div class="eze">
   <div class="flex-container">
     <div class="flex-item-left" data-aos="zoom-in-right"  data-aos-duration="4000">
