--- a/csr.html
+++ b/csr.html
@@ -371,16 +371,16 @@ data-aos-offset="0">
           <li><a href="csr.html" style="font-size: 15px;">Social Impact</a></li>
           <li><a href="about.html" target="_blank" style="font-size: 15px;">About Us</a></li>
           <li><a href="pac.html" style="font-size: 15px;"> Privacy & Cookies Policy</a></li>
+
         </ul>
       </div>
       
   
     <div class="w3-third">
-      <h3 class="azonto"  style="padding-top: 40px;"><i class="fas fa-newspaper"></i>Subscribe</h3>
-      <p>To ensure that you receive all the latest updates and events from our organization, we invite you to subscribe to our mailing list.</p>
-    <br>
- <a href="£" target="_blank"><button class="crew">Subscribe</button></a>
-      
+      <h3 class="azonto" style="padding-top: 40px; text-align: center;"><i class="fas fa-link"></i> Quick Links</h3>
+    <br> <ul class="custom-list">
+    <li><a href="tac.html" style="font-size: 15px;"> Terms and Conditions</a></li>
+    </ul>  
     </div>
 
 
