--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ By addressing the challenges posed by Water Hyacinth and focusing on manatee con
   
   <div class="w3-row-padding">
     <div class="w3-third" >
-      <h3 class="dog" style="padding-top: 40px;"> <i class="fas fa-envelope"></i> Contact 
+      <h3 class="dog"> <i class="fas fa-envelope"></i> Contact 
       </h3>
 
       <p class="azonto"> <i class="fas fa-map-marker-alt"></i>
@@ -512,18 +512,21 @@ By addressing the challenges posed by Water Hyacinth and focusing on manatee con
   
     <div class="w3-third" style="color: black;">
      
-        <h3 class="dog" style="padding-top: 40px;"><i class="fas fa-link"></i> Quick Links</h3>
+        <h3 class="dog"><i class="fas fa-link"></i> Quick Links</h3>
        <ul class="custom-list">
           <li><a href="index.html" style="font-size: 15px;">Home</a></li>
           <li><a href="csr.html" style="font-size: 15px;">Social Impact</a></li>
           <li><a href="about.html" target="_blank" style="font-size: 15px;">About Us</a></li>
           <li><a href="pac.html" style="font-size: 15px;"> Privacy & Cookies Policy</a></li>
         </ul>
+        <ul class="custom-list">
+          <li><a href="tac.html" style="font-size: 15px;"> Terms and Conditions</a></li>
+          </ul> 
       </div>
       
   
     <div class="w3-third">
-      <h3 class="dog"  style="padding-top: 40px;"><i class="fas fa-newspaper"></i>Subscribe</h3>
+      <h3 class="dog"><i class="fas fa-newspaper"></i>Subscribe</h3>
       <p>To ensure that you receive all the latest updates and events from our organization, we invite you to subscribe to our mailing list.</p>
     <br>
  <a href="£" target="_blank"><button class="rect">Subscribe</button></a>
