--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@ Empowering a Greener Future">
   </nav>
 
   <div class="heart">
-    <img src="web.jpg" alt="Styled Image" class="lung">
+    <img src="web.jpeg" alt="Styled Image" class="lung">
 </div>
 
-
+<br>
 
   <div class="eze">
 <div class="flex-container" data-aos="fade-up" data-aos-duration="3000">
