--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Empowering a Greener Future">
   </nav>
 
   <div class="heart">
-    <img src="web.jpeg" alt="Styled Image" class="lung">
+    <img src="web.jpg" alt="Styled Image" class="lung">
 </div>
 
 <br>
