--- a/index.html
+++ b/index.html
@@ -301,16 +301,8 @@ Empowering a Greener Future">
       <div class="wpb_wrapper">
         <details style="color: black;">
           
-            <summary><strong>Continue Reading</strong></summary>
-            <p>If you are a visitor to our website we act as the ‘data controller’ of personal data. This means we</p>
-            <p>determine how and why your data are processed.</p>
-            <p><strong>Your Responsibilities</strong></p>
-            <ol>
-                <li>Read this Privacy Policy</li>
-                <li>If you provide us with personal information about other people, please ensure you are</li>
-                <li>authorized to share their information. If others give us your information, we will only use that information for the specific reason for which it was provided to us.</li>
-                <li>By submitting the information, you confirm that you have the right to authorize us to process it on your behalf in accordance with this Privacy Policy.</li>
-            </ol>
+            <summary><strong>Continue Reading</strong></summary><br>
+            <p>  Green Infrastructure and Power Investments PLC is pioneering innovation in renewable energy with its cutting-edge Automated Solar PV Assembly and Production facility. This state-of-the-art production line enhances efficiency and scalability in the manufacturing of solar photovoltaic panels.<br><br> By integrating advanced automation technologies, the facility significantly reduces production costs and time, ensuring the rapid deployment of high-quality solar panels to meet growing global energy demands. <br>This initiative underscores our commitment to sustainable energy solutions and our leadership in the renewable energy sector.</p>
             <p>&nbsp;</p>
         </details>
     </div>
@@ -328,16 +320,9 @@ Empowering a Greener Future">
     </strong>
     <div class="wpb_wrapper">
       <details style="color: black;">
-          <summary><strong>Continue Reading</strong></summary>
-          <p>If you are a visitor to our website we act as the ‘data controller’ of personal data. This means we</p>
-          <p>determine how and why your data are processed.</p>
-          <p><strong>Your Responsibilities</strong></p>
-          <ol>
-              <li>Read this Privacy Policy</li>
-              <li>If you provide us with personal information about other people, please ensure you are</li>
-              <li>authorized to share their information. If others give us your information, we will only use that information for the specific reason for which it was provided to us.</li>
-              <li>By submitting the information, you confirm that you have the right to authorize us to process it on your behalf in accordance with this Privacy Policy.</li>
-          </ol>
+          <summary><strong>Continue Reading</strong></summary><br>
+          <p>Green Infrastructure and Power Investments PLC is at the forefront of modern energy transmission with the development of a High Voltage Direct Current (HVDC) Submarine Transmission Line. <br>This project will enable the efficient and reliable transfer of large volumes of electricity across vast distances, including undersea routes.<br><br> The HVDC technology minimizes energy losses and ensures stable power supply, making it an ideal solution for connecting offshore renewable energy sources to onshore grids.<br> This strategic investment reflects our dedication to enhancing energy infrastructure and promoting sustainable power solutions.
+</p>
           <p>&nbsp;</p>
       </details>
   </div>
@@ -361,16 +346,8 @@ Empowering a Greener Future">
   </strong>
   <div class="wpb_wrapper">
     <details style="color: black;">
-        <summary><strong>Continue Reading</strong></summary>
-        <p>If you are a visitor to our website we act as the ‘data controller’ of personal data. This means we</p>
-        <p>determine how and why your data are processed.</p>
-        <p><strong>Your Responsibilities</strong></p>
-        <ol>
-            <li>Read this Privacy Policy</li>
-            <li>If you provide us with personal information about other people, please ensure you are</li>
-            <li>authorized to share their information. If others give us your information, we will only use that information for the specific reason for which it was provided to us.</li>
-            <li>By submitting the information, you confirm that you have the right to authorize us to process it on your behalf in accordance with this Privacy Policy.</li>
-        </ol>
+        <summary><strong>Continue Reading</strong></summary><br>
+        <p> Our 280 MW Solar PV Farm represents a significant leap forward in renewable energy generation. Spearheaded by Green Infrastructure and Power Investments PLC, this large-scale solar power project harnesses the abundant energy of the sun to produce clean, sustainable electricity.<br> The farm will significantly contribute to reducing carbon emissions and fostering energy independence. By integrating the latest solar technology, we are able to maximize efficiency and energy output, reinforcing our role as a leader in the renewable energy market.</p>
         <p>&nbsp;</p>
     </details>
 </div>
@@ -391,16 +368,9 @@ Empowering a Greener Future">
 </strong>
 <div class="wpb_wrapper">
   <details style="color: black;">
-      <summary><strong>Continue Reading</strong></summary>
-      <p>If you are a visitor to our website we act as the ‘data controller’ of personal data. This means we</p>
-      <p>determine how and why your data are processed.</p>
-      <p><strong>Your Responsibilities</strong></p>
-      <ol>
-          <li>Read this Privacy Policy</li>
-          <li>If you provide us with personal information about other people, please ensure you are</li>
-          <li>authorized to share their information. If others give us your information, we will only use that information for the specific reason for which it was provided to us.</li>
-          <li>By submitting the information, you confirm that you have the right to authorize us to process it on your behalf in accordance with this Privacy Policy.</li>
-      </ol>
+      <summary><strong>Continue Reading</strong></summary><br>
+      <p>Green Infrastructure and Power Investments PLC is revolutionizing energy storage with the implementation of a 150 MWh Battery Energy Storage System (BESS). This system is designed to store and manage large quantities of energy, providing a reliable backup power source and ensuring grid stability. By enabling the storage of excess renewable energy, the BESS enhances the efficiency and resilience of our energy supply, facilitating a smoother transition to a sustainable energy future. This investment highlights our commitment to innovative solutions in energy storage and management.
+      </p>
       <p>&nbsp;</p>
   </details>
 </div>
